2006-04-18  Tim-Philipp Müller  <tim at centricular dot net>

	* sys/oss/gst-i18n-plugin.h:
	  Remove bogus file that doesn't belong here.

2006-04-17  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Philippe Valembois

	* ext/shout2/gstshout2.c: (gst_shout2send_init),
	(gst_shout2send_set_metadata), (gst_shout2send_event),
	(gst_shout2send_render), (gst_shout2send_change_state):
	* ext/shout2/gstshout2.h:
	  Handle tags being received before the connection to
	  the server is established properly (see #338636).

2006-04-17  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/shout2/gstshout2.c: (gst_shout2send_render):
	  Don't crash in case the connection to the server fails:
	  don't set pointer to NULL by assigning FALSE; error out
	  properly by using GST_ELEMENT_ERROR and returning
	  GST_FLOW_ERROR (fixes #338636). Lastly, free connection
	  before resetting the pointer.

2006-04-17  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/id3demux/id3tags.c:
	Recognise TCO (Genre) tags in ID3v2.2. Patch by Alex Lancaster
	(Fixes #338713)

2006-04-12  Wim Taymans  <wim@fluendo.com>

	* ext/gdk_pixbuf/gstgdkpixbuf.c: (gst_gdk_pixbuf_sink_setcaps),
	(gst_gdk_pixbuf_get_capslist), (gst_gdk_pixbuf_sink_getcaps),
	(gst_gdk_pixbuf_class_init), (gst_gdk_pixbuf_init),
	(gst_gdk_pixbuf_flush), (gst_gdk_pixbuf_sink_event),
	(gst_gdk_pixbuf_chain):
	Some cleanups.
	Added RGBA as a possible output format.
	Correctly free the supported mimetypes.
	deprecate silent arg, it's not used.
	Return result from _alloc_buffer to peer.

2006-04-11  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/rtp/gstrtpmp4vdepay.c: (gst_rtp_mp4v_depay_process):
	  Don't leak memory allocated by gst_buffer_new_and_alloc() by
	  overwriting GST_BUFFER_MALLOCDATA.

2006-04-11  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/libpng/gstpngdec.c: (gst_pngdec_init),
	(user_endrow_callback), (user_end_callback),
	(gst_pngdec_caps_create_and_set), (gst_pngdec_chain),